--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -30,20 +30,21 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col">
+                                <div class="mr-auto m-2">
                                     <h4><i class="bi bi-file-person-fill"></i> Datos del Alumno</h4>
                                 </div>
-                                <div class="col-11" align="right">
+
+                                <div class="ml-auto m-2">
                                     <div class="custom-control custom-switch"
                                          title="Habilitar edición del alumno.">
                                         <input type="checkbox" class="custom-control-input" id="switchEditar">
                                         <label class="custom-control-label" for="switchEditar">Editar</label>
                                     </div>
+
+
                                 </div>
-                                <div class="col" align="right">
-                                    <a class="bi bi-trash-fill" href="#" data-toggle="modal"
-                                       data-target="#eliminarAlumno" title="Desasociar alumno del grupo."></a>
-                                </div>
+                                <a class="bi bi-trash-fill m-2" href="#" data-toggle="modal"
+                                   data-target="#eliminarAlumno" title="Desasociar alumno del grupo."></a>
                             </div>
                         </div>
                         <form action="/grupo/alumnos/{{idgrupo}}/{{alumno.dataValues.id}}?_method=PUT"
