--- a/views/reporte/formulario-reporte-desercion.hbs
+++ b/views/reporte/formulario-reporte-desercion.hbs
@@ -58,7 +58,7 @@
         <div class="row-cols-1 m-2 p-2">
             <div class="form-group">
                 <label for="mensaje">Mensaje</label>
-                <textarea type="text" class="form-control" id="mensaje" name="mensaje" required>
+                <textarea type="text" class="form-control" id="mensaje" name="mensaje" rows="4" required>
                 </textarea>
             </div>
         </div>
