Mejora vista-grupo-temas

--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -15,7 +15,7 @@
 <div class="row">
     <!-- Generación de un card por tema -->
     {{#each tema}}
-        <div class="card" style="height:14rem; width: 18rem;  margin-bottom: 5px; margin-right: 5px">
+        <div class="card" style="height:14rem; width: 18rem;  margin-bottom: 5px; margin-right: 5px; margin-left: 5px">
             <div class="card-header d-flex flex-row-reverse">
                 <a class="bi bi-trash-fill " align="right" data-toggle="modal"
                    data-target="#eliminarTemaModal{{dataValues.id}}" title="Eliminar el tema permanentemente."></a>
@@ -98,19 +98,19 @@
 
         <!-- En caso de que no existan temas se despliega un card con un mensaje -->
     {{else}}
-        <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
-            <div class="card" style="height:14rem; width: 18rem;">
+
+            <div class="card" style="height:14rem; width: 18rem; margin-bottom: 5px; margin-right: 5px; margin-left: 5px">
                 <div class="card-body">
                     <h5 class="card-title">No hay temas existentes en este grupo.</h5>
                     <p class="card-text">Agregue un tema.</p>
                 </div>
-            </div>
+
         </div>
     {{/each}}
 
     <!-- Card fija para la creación detema -->
 
-    <div class="card" style="height:14rem; width: 18rem; margin-bottom: 5px; margin-right: 5px">
+    <div class="card" style="height:14rem; width: 18rem; margin-bottom: 5px; margin-right: 5px; margin-left: 5px">
         <div class="card-body justify-content-center align-center">
             <div class="row justify-content-center align-items-center">
                 <h5 class="card-title">Nuevo tema</h5>
