--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -125,7 +125,7 @@
             {{else}}
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container text-center">
-                        <h2 class="lead">No existen equipos en este grupo.</h2>
+                        <h2>No existen equipos en este grupo.</h2>
                     </div>
                 </div>
             {{/if}}
