Añadidos mensajes cuando ciertos elementos no existen.

--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -15,6 +15,8 @@
                 {{/each}}
                 {{#if temas}}
                     <li class="nav-item"><a class="nav-link" href="/grupo/vista-general/{{idgrupo}}"><i class="bi-book-half"></i><strong> Todos</strong></a></li>
+                {{else}}
+                    <li class="nav-item"><strong>No existen temas</strong></li>
                 {{/if}}
             </ul>
         </div>
