Agregado titulo en el formulario de reportes.

--- a/views/reporte/formulario-reporte-desercion.hbs
+++ b/views/reporte/formulario-reporte-desercion.hbs
@@ -1,3 +1,4 @@
+<title>Generación de Reportes - Seguimiento de Estudiantes</title>
 <div class="container">
     {{#if error}}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
