--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -61,8 +61,9 @@
                             <div class="row">
                                 <div class="col">
                                     <label for="nombre" class="form-label">Nombre</label>
+                                    <a class="bi bi-info-circle-fill" data-toggle="popover" title="Longitud de nombre" data-content="Se recomienda nombres cortos para una correcta visualización en el programa (maximo 20 caracteres)."></a>
                                     <input type="text" class="form-control" id="nombre" name="nombre"
-                                           disabled value="{{actividad.dataValues.nombre}}" required>
+                                           disabled value="{{actividad.dataValues.nombre}}" maxlength="20" required>
                                 </div>
                                 <div class="col">
                                     <label for="valor">Valor</label>
