--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -131,7 +131,7 @@
                 </section>
             </div>
 
-            <div class="row-cols-1">
+            <div class="row-cols-1 no-print">
 
                 <button id='current' class="btn btn-primary no-print" onclick="print_current_page()">Imprimir</button>
                 <a class="btn btn-secondary no-print" href="/filtro/1">Salir</a>
@@ -147,10 +147,18 @@
                     <img src="/img/footer-left.png">
                 </figure>
                 <div class="col -paragraph montserrat">
-                    Carr. Irapuato – Silao km 12.5 Colonia El Copal,
+                    <p style="margin-bottom: 0; margin-block-start: 0; margin-block-end: 0; height: 20px">
+                        Carr. Irapuato – Silao km 12.5 Colonia El Copal,
+                    </p>
+                    <p style="margin-bottom: 0; margin-block-start: 0; margin-block-end: 0; height: 20px">
                     Irapuato, Guanajuato
+                    </p>
+                    <p style="margin-bottom: 0; margin-block-start: 0; margin-block-end: 0; height: 20px">
                     C.P. 36821 Tels. 462 6967900 y 6067602
+                    </p>
+                    <p style="margin-bottom: 0; margin-block-start: 0; margin-block-end: 0; height: 20px">
                     tecnm.mx | irapuato.tecnm.mx
+                    </p>
                 </div>
 
                 <div>
