Añade mejoras en la distribución del footer.

--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -110,7 +110,7 @@
             </div>
 
             <div class="row-cols-1 montserrat -paragraph mt-auto">
-                <section class="extra-bold">
+                <section class="extra-bold" style="padding-top: 200px;">
                     <br><br>
                     <p>_______________________________________</p>
                     <p>ATENTAMENTE</p>
@@ -136,8 +136,10 @@
                 <button id='current' class="btn btn-primary no-print" onclick="print_current_page()">Imprimir</button>
                 <a class="btn btn-secondary no-print" href="/filtro/1">Salir</a>
                 <br>
-                Esto se trata de una vista previa, el reporte se distribuirá correctamente una vez que se de click en
-                imprimir.
+                    <p>
+                        Esto se trata de una vista previa, el reporte se distribuirá correctamente una vez que se de click en
+                        imprimir.
+                    </p>
                 <br>
             </div>
         </div>
