--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -5,8 +5,8 @@
     }
 
     .extra-bold {
-        font-weight: 800;
-        font-size: 11pt; /*10 pt*/
+        font-weight: 800 !important;
+        font-size: 13pt !important; /*10 pt*/
     }
 
     .regular p th{
@@ -39,12 +39,34 @@
     }
 
     @media print {
-
-
         body{
             width: 21.59cm;
             height: 27.94cm;
             margin: 1cm 2.5cm 2cm 0.5cm;
+        }
+        .montserrat .extra-bold .regular .medium {
+            font-family: 'Montserrat';
+        }
+
+        .extra-bold{
+            font-weight: 800 !important;
+            font-size: 13pt !important; /*10 pt*/
+        }
+
+        .regular p th{
+            font-weight: 400 !important;
+            font-size: 12pt !important; /*9 pt*/
+        }
+        .medium p{
+            font-weight: 500 !important;
+            font-size: 11pt !important; /*8 pt*/
+        }
+        .extra-light p{
+            font-weight: 200 !important;
+            font-size: 11pt !important; /*8 pt*/
+        }
+        section p {
+            margin-bottom: 0 !important;
         }
     }
 </style>
@@ -77,7 +99,7 @@
                 <p> Irapuato, Gto. </p>
             </div>
 
-            <div class="row-cols-1  extra-bold" style="text-transform: uppercase">
+            <div class="row-cols-1  extra-bold " style="text-transform: uppercase">
                 {{coordinadorNombre}}<br>
                 {{pronombre}} {{carrera}}<br>
                 PRESENTE<br>
@@ -116,7 +138,7 @@
                 <section class="extra-bold" style="padding-top: 200px;">
                     <br><br>
                     <p>_______________________________________</p>
-                    <p>ATENTAMENTE</p>
+                    <p>A T E N T A M E N T E</p>
                     <div class="extra-light">
                         <p>Excelencia en Educación Tecnológica</p>
                         <p>Espíritu de Excelencia en Desarrollo Tecnológico</p>
